Overlay management - reverting to previous logic that doesn't need changes at build time

--- a/tools/json/config.system.json
+++ b/tools/json/config.system.json
@@ -331,7 +331,7 @@
                     ],
                     "status": "Stable",
                     "author": "@viraniac @igorpecovnik",
-                    "condition": "[ -n $OVERLAY_DIR ] && [ -n $BOOT_SOC ]"
+                    "condition": "[ -d /boot/dtb/ ]"
                 }
             ]
         }
