[bug] Need at least one enabled sub
Quick fix for Desktop, all sub entries seemed disabled so the parent also needs disabled.

--- a/tools/json/config.software.json
+++ b/tools/json/config.software.json
@@ -7,7 +7,7 @@
                 {
                     "id": "Desktops",
                     "description": "Desktop Environments",
-                    "status": "Stable",
+                    "status": "Disabled",
                     "sub": [
                         {
                             "id": "XFCE",
