--- a/debian.conf
+++ b/debian.conf
@@ -1,4 +1,4 @@
 lib:/usr/
 bin:/usr/
 share:/usr/
-tools/repository/armbian-config.list:/etc/apt/sources.d/
+tools/repository/armbian-config.list:/etc/apt/sources.list.d/
