Overlay management: disable showing this option where its not supported
Odroid XU4 is the only board where /boot/boot.ini way of setting boot parameters is used. Since this is not supported, makes not point showing an option in the menu.

--- a/tools/json/config.system.json
+++ b/tools/json/config.system.json
@@ -331,7 +331,7 @@
                     ],
                     "status": "Stable",
                     "author": "@viraniac @igorpecovnik",
-                    "condition": "[ -d /boot/dtb/ ]"
+                    "condition": "[ -d /boot/dtb/ ] && [ -f /boot/armbianEnv.txt ]"
                 }
             ]
         }
