--- a/tools/json/config.software.json
+++ b/tools/json/config.software.json
@@ -824,7 +824,38 @@
                             "status": "Stable",
                             "author": "@schwar3kat",
                             "condition": "check_if_installed emby-server"
+                        },
+                        {
+                            "id": "MED010",
+                            "description": "Stirling-PDF Install",
+                            "command": [
+                                "module_stirling install"
+                            ],
+                            "status": "Stable",
+                            "author": "@igorpecovnik",
+                            "condition": "! module_stirling status"
+                        },
+                        {
+                            "id": "MED011",
+                            "description": "Stirling-PDF Remove",
+                            "command": [
+                                "module_stirling remove"
+                            ],
+                            "status": "Stable",
+                            "author": "@igorpecovnik",
+                            "condition": "module_stirling status"
+                        },
+                        {
+                            "id": "MED012",
+                            "description": "Stirling-PDF Purge data folder",
+                            "command": [
+                                "module_stirling purge"
+                            ],
+                            "status": "Stable",
+                            "author": "@igorpecovnik",
+                            "condition": "! module_stirling status && [[ -d \"${SOFTWARE_FOLDER}/stirling\" ]]"
                         }
+
                     ]
                 },
                 {
