--- a/tools/json/config.system.json
+++ b/tools/json/config.system.json
@@ -332,6 +332,16 @@
                     "status": "Stable",
                     "author": "@viraniac @igorpecovnik",
                     "condition": "[ -d /boot/dtb/ ] && [ -f /boot/armbianEnv.txt ]"
+                },
+                {
+                    "id": "SYODD",
+                    "description": "Select Odroid board configuration",
+                    "command": [
+                        "manage_odroid_board"
+                    ],
+                    "status": "Preview",
+                    "author": "",
+                    "condition": "[ -f /etc/armbian-release ] && grep -q \"^BOARDFAMILY=odroidxu4\" /etc/armbian-release"
                 }
             ]
         }
